# z_docstest_9

./: .readthedocs.yaml  README.md  environment.yml  new_script.py  pyproject.toml  test_pyscript.py
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst  legal.rst  test_pyscript.rst  usage.rst
